Added a line above footer

--- a/src/index.html
+++ b/src/index.html
@@ -45,15 +45,21 @@
 
 		<div class="footer">
 			<div class="container">
-				<div class="col-md-2">
-					<strong>Home</strong>
-					<strong>Resume</strong>
-					<strong>Projects</strong>
-					<p>&copy; Copyright 2015</p>
+				<div class="row">
+					<div class="col-md-2">
+						<strong>Home</strong>
+						<strong>Resume</strong>
+						<strong>Projects</strong>
+					</div>
+					<div class="col-md-2">
+						<strong>About</strong>
+						<strong>Contact</strong>
+					</div>
 				</div>
-				<div class="col-md-2">
-					<strong>About</strong>
-					<strong>Contact</strong>
+				<div class="row">
+					<div class="col-md-12">
+						<p>&copy; Copyright 2015</p>
+					</div>
 				</div>
 			</div>
 		</div>
