--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="ywPortal">
 	
 	<head>
 		<link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
@@ -36,8 +36,12 @@
 					<div class="col-md-12">
 						<h1>Home</h1>
 						<p>
-							Weclome to my homepage.
+							Welcome to my homepage.
 						</p>
+
+						<div ng-controller="homeController as homeVM">
+							<div ng-bind="homeVM.greeting"></div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -51,11 +55,15 @@
 						<strong>Resume</strong>
 						<strong>Projects</strong>
 					</div>
-					<div class="col-md-2">
-						<strong>About</strong>
-						<strong>Contact</strong>
+
+					<div class="row">	
+						<div class="col-md-2">
+							<strong>About</strong>
+							<strong>Contact</strong>
+						</div>
 					</div>
 				</div>
+
 				<div class="row">
 					<div class="col-md-12">
 						<p>&copy; Copyright 2015</p>
@@ -64,6 +72,12 @@
 			</div>
 		</div>
 
+		<!-- vendor dependencies -->
+		<script src="../bower_components/angular/angular.js"></script>
+
+		<!-- project dependencies -->
+		<script src="./app/app.js"></script>
+		<script src="./app/home/js/home-controller.js"></script>
 	</body>
 
 </html>
