--- a/src/index.html
+++ b/src/index.html
@@ -30,21 +30,7 @@
 					</div>
 				</div>
 			</div>
-
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<h1>Home</h1>
-						<p>
-							Welcome to my homepage.
-						</p>
-
-						<div ng-controller="homeController as homeVM">
-							<div ng-bind="homeVM.greeting"></div>
-						</div>
-					</div>
-				</div>
-			</div>
+			<div ng-view></div>
 		</div>
 
 		<div class="footer">
@@ -74,9 +60,11 @@
 
 		<!-- vendor dependencies -->
 		<script src="../bower_components/angular/angular.js"></script>
+		<script src="../bower_components/angular-route/angular-route.js"></script>
 
 		<!-- project dependencies -->
 		<script src="./app/app.js"></script>
+		<script src="./app/routes.js"></script>
 		<script src="./app/home/js/home-controller.js"></script>
 	</body>
 
