--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,20 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<strong>Home</strong>
+							<a href="#/">Home</a>
 						</div>
 						<div class="col-md-2"></div>
 						<div class="col-md-2">
-							<strong>Resume</strong>
+							<a href="#/resume">Resume</a>
 						</div>
 						<div class="col-md-2">
-							<strong>Projects</strong>
+							<a href="#/projects">Projects</a>
 						</div>
 						<div class="col-md-2">
-							<strong>About</strong>
+							<a href="#/about">About</a>
 						</div>
 						<div class="col-md-2">
-							<strong>Contact</strong>
+							<a href="#/contact">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -37,16 +37,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-2">
-						<strong>Home</strong>
-						<strong>Resume</strong>
-						<strong>Projects</strong>
+						<a href="#/home">Home</a>
+						<a href="#/resume">Resume</a>
+						<a href="#/projects">Projects</a>
 					</div>
-
-					<div class="row">	
-						<div class="col-md-2">
-							<strong>About</strong>
-							<strong>Contact</strong>
-						</div>
+					<div class="col-md-2">
+						<a href="#/about">About</a>
+						<a href="#/contact">Contact</a>
 					</div>
 				</div>
 
@@ -66,6 +63,10 @@
 		<script src="./app/app.js"></script>
 		<script src="./app/routes.js"></script>
 		<script src="./app/home/js/home-controller.js"></script>
+		<script src="./app/resume/js/resume-controller.js"></script>
+		<script src="./app/projects/js/projects-controller.js"></script>
+		<script src="./app/about/js/about-controller.js"></script>
+		<script src="./app/contact/js/contact-controller.js"></script>b
 	</body>
 
 </html>
