--- a/src/index.html
+++ b/src/index.html
@@ -8,24 +8,24 @@
 
 	<body>
 		<div class="wrapper">
-			<div class="header">
+			<div class="header" ng-controller="navController as navVM">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<a href="#/">Home</a>
+							<a ng-class="navVM.getClass('/')"href="#/">Home</a>
 						</div>
 						<div class="col-md-2"></div>
 						<div class="col-md-2">
-							<a href="#/resume">Resume</a>
+							<a ng-class="navVM.getClass('/resume')" href="#/resume">Resume</a>
 						</div>
 						<div class="col-md-2">
-							<a href="#/projects">Projects</a>
+							<a ng-class="navVM.getClass('/projects')"href="#/projects">Projects</a>
 						</div>
 						<div class="col-md-2">
-							<a href="#/about">About</a>
+							<a ng-class="navVM.getClass('/about')"href="#/about">About</a>
 						</div>
 						<div class="col-md-2">
-							<a href="#/contact">Contact</a>
+							<a ng-class="navVM.getClass('/contact')"href="#/contact">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -66,7 +66,8 @@
 		<script src="./app/resume/js/resume-controller.js"></script>
 		<script src="./app/projects/js/projects-controller.js"></script>
 		<script src="./app/about/js/about-controller.js"></script>
-		<script src="./app/contact/js/contact-controller.js"></script>b
+		<script src="./app/contact/js/contact-controller.js"></script>
+		<script src="./app/shared/js/nav-controller.js"></script>
 	</body>
 
 </html>
