--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html ng-app="ywPortal">
 	
 	<head>
+		<link rel="stylesheet" type="text/css" href="../bower_components/animate.css/animate.css">
 		<link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
