changed location of index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html ng-app="ywPortal">
 	
 	<head>
-		<link rel="stylesheet" type="text/css" href="../bower_components/animate.css/animate.css">
-		<link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="./bower_components/animate.css/animate.css">
+		<link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="./src/main.css">
 	</head>
 
 	<body>
@@ -58,18 +58,18 @@
 		</div>
 
 		<!-- vendor dependencies -->
-		<script src="../bower_components/angular/angular.js"></script>
-		<script src="../bower_components/angular-route/angular-route.js"></script>
+		<script src="./bower_components/angular/angular.js"></script>
+		<script src="./bower_components/angular-route/angular-route.js"></script>
 
 		<!-- project dependencies -->
-		<script src="./app/app.js"></script>
-		<script src="./app/routes.js"></script>
-		<script src="./app/home/js/home-controller.js"></script>
-		<script src="./app/resume/js/resume-controller.js"></script>
-		<script src="./app/projects/js/projects-controller.js"></script>
-		<script src="./app/about/js/about-controller.js"></script>
-		<script src="./app/contact/js/contact-controller.js"></script>
-		<script src="./app/shared/js/nav-controller.js"></script>
+		<script src="./src/app/app.js"></script>
+		<script src="./src/app/routes.js"></script>
+		<script src="./src/app/home/js/home-controller.js"></script>
+		<script src="./src/app/resume/js/resume-controller.js"></script>
+		<script src="./src/app/projects/js/projects-controller.js"></script>
+		<script src="./src/app/about/js/about-controller.js"></script>
+		<script src="./src/app/contact/js/contact-controller.js"></script>
+		<script src="./src/app/shared/js/nav-controller.js"></script>
 	</body>
 
 </html>
