--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<div class="wrapper">
-			<div class="header" ng-controller="navController as navVM">
+			<div class="navbar" ng-controller="navController as navVM">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
