--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<a ng-class="navVM.getClass('/')"href="#/">Home</a>
+							<a class="logo" ng-class="navVM.getClass('/')"href="#/">.YW</a>
 						</div>
 						<div class="col-md-2"></div>
 						<div class="col-md-2">
