--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="ywPortal">
 	
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="./bower_components/animate.css/animate.css">
 		<link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="./src/main.css">
