--- a/index.html
+++ b/index.html
@@ -14,26 +14,31 @@
 	    	<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="navController as navVM">
 				<div class="container">
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" date-toggle="collapse" data-target=".navbar-collapse">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 							<span class="sr-only">Toggle navigation</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#">.YW</a>
+						<a class="navbar-brand" href="#/">.YW</a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a ng-class="navVM.getClass('/')" href="#/">Home</a></li>
 							<li><a ng-class="navVM.getClass('/resume')" href="#/resume">Resume</a></li>
 							<li class="dropdown">
-								<a class="dropdown-toggle" date-toggle="dropdown" ng-class="navVM.getClass('/projects')" href="#/projects">projects<b class="caret"></b></a>
+								<a class="dropdown-toggle" 
+									data-toggle="dropdown" 
+									role="button"
+									ng-class="navVM.getClass('/projects')" 
+									href="#/projects">projects<b class="caret"></b>
+								</a>
 
-							<ul class="dropdown-menu">
-								<li class="dropdown-header">Projects</li>
-								<li><a href="#">Project 1</a></li>
-								<li><a href="#">Project 2</a></li>
-							</ul>
+								<ul class="dropdown-menu" role="menu">
+									<li class="dropdown-header">Projects</li>
+									<li><a href="#">Project 1</a></li>
+									<li><a href="#">Project 2</a></li>
+								</ul>
 							</li>
 							<li><a ng-class="navVM.getClass('/contact')" href="#/contact">Contact</a></li>
 						</ul>
@@ -67,6 +72,8 @@
 		</div>
 
 		<!-- vendor dependencies -->
+		<script src="./bower_components/jquery/dist/jquery.js"></script>
+		<script src="./bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="./bower_components/angular/angular.js"></script>
 		<script src="./bower_components/angular-route/angular-route.js"></script>
 
