--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#/">.YW</a>
+						<a ng-class="navVM.getClass('/')" class="navbar-brand" href="#/">.YW</a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
@@ -49,6 +49,7 @@
 
 		<div class="footer">
 			<div class="container">
+				<hr/>
 				<div class="row">
 					<div class="col-md-2">
 						<a href="#/home">Home</a>
@@ -63,7 +64,7 @@
 
 				<div class="row">
 					<div class="col-md-12">
-						<p>&copy; Copyright 2015</p>
+						<p>&copy; Copyright 2015 Yanwen Wang</p>
 					</div>
 				</div>
 			</div>
