added tic-tac-toe controller

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 								</ul>
 							</li>
 							<li><a ng-class="navVM.getClass('/contact')" href="#/contact">Contact</a></li>
+							<li><a ng-class="navVM.getClass('/tic-tac-toe')" href="#/tic-tac-toe">tic-tac-toe</a></li>
 						</ul>
 					</div>
 				</div>
@@ -73,6 +74,7 @@
 		<script src="./src/app/about/js/about-controller.js"></script>
 		<script src="./src/app/contact/js/contact-controller.js"></script>
 		<script src="./src/app/shared/js/nav-controller.js"></script>
+		<script src="./src/app/tic-tac-toe/js/tic-tac-toe-controller.js"></script>
 
 	</body>
 
