--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 		<script src="./bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="./bower_components/angular/angular.js"></script>
 		<script src="./bower_components/angular-route/angular-route.js"></script>
-
+		<script src="./bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+		<script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
 		<!-- project dependencies -->
 		<script src="./src/app/app.js"></script>
@@ -75,6 +76,7 @@
 		<script src="./src/app/contact/js/contact-controller.js"></script>
 		<script src="./src/app/shared/js/nav-controller.js"></script>
 		<script src="./src/app/tic-tac-toe/js/tic-tac-toe-controller.js"></script>
+		<script src="./src/app/shared/js/modal-info-controller.js"></script>
 
 	</body>
 
