removed drop down list from navbar, made projects its own page

--- a/index.html
+++ b/index.html
@@ -16,27 +16,14 @@
                     <a ng-class="navVM.getClass('/')" class="nav-brand-logo" href="#/">.YW</a>
                 </div>
 
-                <i class="fa fa-bars fa-lg hidden-md hidden-lg"
-                    style="float: right;"
-                    ng-click="navVM.collapsed = !navVM.collapsed"></i>
+                <i class="fa fa-bars fa-lg hidden-md hidden-lg"></i>
 
-                <ul collapse="navVM.collapsed">
+                <ul>
                     <li>
                         <a ng-class="navVM.getClass('/resume')" href="#/resume">Resume</a>
                     </li>
                     <li>
-                        <div class="btn-group" dropdown dropdown-append-to-body>
-                            <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle>
-                                Projects
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>
-                                    <a ng-class="navVM.getClass('/tic-tac-toe')" href="#/tic-tac-toe">tic-tac-toe</a>
-                                </li>
-                                <li><a href="#">Sudoku</a></li>
-                            </ul>
-                        </div>
+                        <a ng-class="navVM.getClass('/projects')" href="#/projects">Projects</a>
                     </li>
                     <li>
                         <a ng-class="navVM.getClass('/contact')" href="#/contact">Contact</a>
