on navbar, hid ul on smaller screens, show bars on smaller screens

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="wrapper">
         <div class="navbar" ng-controller="navController as navVM">
             <div class="container">
-                <div class="nav-brand">
-                    <a ng-class="navVM.getClass('/')" class="nav-brand-logo" href="#/">.YW</a>
+                <div class="navbar-brand">
+                    <a ng-class="navVM.getClass('/')" class="navbar-brand-logo" href="#/">.YW</a>
                 </div>
 
                 <i class="fa fa-bars fa-lg hidden-md hidden-lg"></i>
 
-                <ul>
+                <ul class="hidden-sm hidden-xs">
                     <li>
                         <a ng-class="navVM.getClass('/resume')" href="#/resume">Resume</a>
                     </li>
@@ -57,7 +57,6 @@
     <script src="./src/app/home/js/home-controller.js"></script>
     <script src="./src/app/resume/js/resume-controller.js"></script>
     <script src="./src/app/projects/js/projects-controller.js"></script>
-    <script src="./src/app/about/js/about-controller.js"></script>
     <script src="./src/app/contact/js/contact-controller.js"></script>
     <script src="./src/app/shared/js/nav-controller.js"></script>
     <script src="./src/app/tic-tac-toe/js/tic-tac-toe-controller.js"></script>
