changed mobile nav hamburger animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a ng-class="navVM.getClass('/')" class="navbar-brand-logo" href="#/">.YW</a>
                 </div>
 
-                <button class="lines-button x2 hidden-md hidden-lg"
+                <button class="lines-button hidden-md hidden-lg"
                     type="button"
                     role="button"
                     aria-label="Toggle Navigation"
