added sudoku coming soon page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="./src/app/contact/js/contact-controller.js"></script>
     <script src="./src/app/shared/js/nav-controller.js"></script>
     <script src="./src/app/tic-tac-toe/js/tic-tac-toe-controller.js"></script>
+    <script src="./src/app/sudouku/js/sudouku-controller.js"></script>
     <script src="./src/app/shared/js/modal-info-controller.js"></script>
 
 </body>
