--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="./src/main.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./bower_components/animate.css/animate.css">
 </head>
 
 <body>
