added scramble-word project landing page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="./src/app/shared/js/nav-controller.js"></script>
     <script src="./src/app/tic-tac-toe/js/tic-tac-toe-controller.js"></script>
     <script src="./src/app/sudouku/js/sudouku-controller.js"></script>
+    <script src="./src/app/scramble-word/js/scramble-word-controller.js"></script>
     <script src="./src/app/shared/js/modal-info-controller.js"></script>
 
 </body>
