added scramble word service which calls wordnik api

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="./src/app/sudouku/js/sudouku-controller.js"></script>
 
     <script src="./src/app/scramble-word/js/scramble-word-controller.js"></script>
+    <script src="./src/app/scramble-word/js/scramble-word-service.js"></script>
 
 
 </body>
