--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
     <script src="./src/app/scramble-word/js/scramble-word-controller.js"></script>
     <script src="./src/app/scramble-word/js/scramble-word-service.js"></script>
+    <script src="./src/app/scramble-word/js/scramble-word-data-service.js"></script>
 
 
 </body>
