added modal service, need to replace tic tac toe modals later

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="./src/app/shared/js/modal-info-controller.js"></script>
     <script src="./src/app/shared/js/nav-controller.js"></script>
     <script src="./src/app/shared/js/common-service.js"></script>
+    <script src="./src/app/shared/js/modal-service.js"></script>
 
     <script src="./src/app/home/js/home-controller.js"></script>
 
