added todo list to index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     <script src="./src/app/scramble-word/js/scramble-word-service.js"></script>
     <script src="./src/app/scramble-word/js/scramble-word-data-service.js"></script>
 
+    <script src="./src/app/to-do-list/js/to-do-list-controller.js"></script>
+    <script src="./src/app/to-do-list/js/to-do-list-data-service.js"></script>
+    <script src="./src/app/to-do-list/js/to-do-list-service.js"></script>
+
 
 </body>
 
