--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     <script src="./src/app/to-do-list/js/to-do-list-controller.js"></script>
     <script src="./src/app/to-do-list/js/to-do-list-data-service.js"></script>
 
+    <script src="./src/app/stop-watch/js/stop-watch-controller.js"></script>
+    <script src="./src/app/stop-watch/js/stop-watch-data-service.js"></script>
+
 
 </body>
 
