--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="./src/app/contact/js/contact-controller.js"></script>
 
     <script src="./src/app/tic-tac-toe/js/tic-tac-toe-controller.js"></script>
+    <script src="./src/app/tic-tac-toe/js/tic-tac-toe-data-service.js"></script>
 
     <script src="./src/app/sudouku/js/sudouku-controller.js"></script>
 
