--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
     <script src="./src/app/stop-watch/js/stop-watch-controller.js"></script>
     <script src="./src/app/stop-watch/js/stop-watch-data-service.js"></script>
 
+    <script src="./src/app/components/js/components-controller.js"></script>
+
+
 
 </body>
 
